add privacy statement

--- a/src/handlebars/header.hbs
+++ b/src/handlebars/header.hbs
@@ -95,7 +95,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="https://blog.docsplant.com" class="dp_btn">
+                            <a href="https://blog.docsplant.com" class="dp_btn internal_link">
                                 <span class="icon">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
