--- a/src/static/css/main.res.css
+++ b/src/static/css/main.res.css
@@ -505,7 +505,8 @@
 
   .contact-form::after {
     max-width: 180px;
-    top: -282px;
+    top: -230px;
+    right: -10px;
   }
 
   .contact-popup-area {
