--- a/src/templates/index.html.j2
+++ b/src/templates/index.html.j2
@@ -595,7 +595,7 @@
             </span>
           </h2>
           <div class="text-sm-center">
-            <a href="#" class="dp_btn dp_btn_primary text-capitalize">{{ get_started_section.button }}</a>
+            <a href="https://blog.docsplant.com" class="dp_btn dp_btn_primary text-capitalize internal_link">{{ get_started_section.button }}</a>
           </div>
         </div>
       </section>
