--- a/src/templates/index.html.j2
+++ b/src/templates/index.html.j2
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>{{ meta.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Docsplant</title>
+  <meta name="keywords" content="{{ meta.description }}" />
   <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
   <!-- bootstrap css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
