Fix contact form language

--- a/src/handlebars/contact_form.hbs
+++ b/src/handlebars/contact_form.hbs
@@ -2,8 +2,7 @@
     <div class="contact-header">
         <h4>How can we help you?</h4>
         <p>
-            <span>Call us on:</span>
-            <a href="tel:+41794096789">+41 79 503 86 78</a>
+            <a href="mailto:info@docsplant.com">info@docsplant.com</a>
         </p>
     </div>
     <div class="contact-form">
