--- a/src/handlebars/contact_form_de.hbs
+++ b/src/handlebars/contact_form_de.hbs
@@ -2,8 +2,7 @@
     <div class="contact-header">
         <h4>Wie können wir helfen?</h4>
         <p>
-            <span>Telefonisch erreichbar unter:</span>
-            <a href="tel:+41794096789">+41 79 503 86 78</a>
+            <a href="mailto:info@docsplant.com">info@docsplant.com</a>
         </p>
     </div>
     <div class="contact-form">
