--- a/src/templates/index.html.j2
+++ b/src/templates/index.html.j2
@@ -629,12 +629,15 @@
     {% if  language == "en" %}
     document.getElementById('headerMain').innerHTML = Handlebars.templates['header.hbs']({ is_en: true, filename: "index.html" })
     document.getElementById('footer').innerHTML = Handlebars.templates['footer.hbs']({})
+    document.getElementById('contact-button').innerHTML = Handlebars.templates['contact_button.hbs']({})
+    document.getElementById('contact-form').innerHTML = Handlebars.templates['contact_form.hbs']({})
     {% else %}
     document.getElementById('headerMain').innerHTML = Handlebars.templates['header.hbs']({ is_en: false, filename: "index.html" })
     document.getElementById('footer').innerHTML = Handlebars.templates['footer_de.hbs']({})
-    {% endif %}
     document.getElementById('contact-button').innerHTML = Handlebars.templates['contact_button.hbs']({})
-    document.getElementById('contact-form').innerHTML = Handlebars.templates['contact_form.hbs']({})
+    document.getElementById('contact-form').innerHTML = Handlebars.templates['contact_form_de.hbs']({})
+    {% endif %}
+
   </script>
 
 </body>
