Add limited time offer

--- a/src/handlebars/contact_form_de.hbs
+++ b/src/handlebars/contact_form_de.hbs
@@ -17,7 +17,7 @@
             <input type="text" name="Name" id="Name" autofocus="autofocus" placeholder="Name"/>
             <input type="email" name="Email" id="Email" required="required" placeholder="example@example.com"/>
             <div class="text-message">
-                <textarea name="Message" id="Message" required="required" placeholder="Nachricht"></textarea>
+                <textarea name="Message" id="Message" required="required" placeholder="Haben Sie interesse an einem kostenfreien Training für Ihr Team? &#10;Dann teilen Sie uns mit, welches Thema Sie am meisten interessiert. &#10;(Das Training ist unverbindlich und ein einmaliges Werbeangebot)"></textarea>
             </div>
         {{!-- <button type="submit" value="Submit" class="send-btn" data-disable-with="Submit"> --}}
         <button type="submit" value="Submit" class="send-btn" data-disable-with="Submit" id="submit-form">
