--- a/src/handlebars/header.hbs
+++ b/src/handlebars/header.hbs
@@ -4,6 +4,17 @@
             <img src="../assets/images/docsplan_logo.svg" class="normal_img">
             <img src="../assets/images/docsplan_logo_dark.svg" class="white_img">
         </a>
+        <!-- limited time offer starts -->
+        <div class="desktop-menu privacy-menu">
+        <div class="navbar_nav">
+        {{#if is_en }}
+        <div class="stack-top"><span>Contact us now and</span><br> get a free training for your team!</div>
+        {{else}}
+        <div class="stack-top"><span>Sichern Sie sich einen</span><br>kostenfreies Training für Ihr Team!</div>
+        {{/if}}
+        </div>
+        </div>
+        <!-- limited time offer end -->
         <div class="header-btn">
             <div class="menu-toggler">
                 <div class="desktop-menu privacy-menu">
