--- a/src/handlebars/contact_form.hbs
+++ b/src/handlebars/contact_form.hbs
@@ -17,7 +17,7 @@
             <input type="text" name="Name" id="Name" autofocus="autofocus" placeholder="Name"/>
             <input type="email" name="Email" id="Email" required="required" placeholder="example@example.com"/>
             <div class="text-message">
-                <textarea name="Message" id="Message" required="required" placeholder="Message"></textarea>
+                <textarea name="Message" id="Message" required="required" placeholder="Get a free training for your team. &#10;Please let us know which topic you are interested in most. (The training comes with no obligations and is a one-time promotional offer)"></textarea>
             </div>
         {{!-- <button type="submit" value="Submit" class="send-btn" data-disable-with="Submit"> --}}
         <button type="submit" value="Submit" class="send-btn" data-disable-with="Submit" id="submit-form">
